--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "G",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "date-fns": "^2.28.0",
+    "http": "^0.0.1-security",
+    "socket.io": "^4.4.1"
+  }
 }
